--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Start EntryTracker
+      - name: Start EntryTracker1
         run: |
           python app.py > app.log 2>&1 &
           sleep 5
