--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r etnryTracker/requirements.txt
 
-      - name: Start EntryTracker1
+      - name: Start EntryTracker
         run: |
           python app.py > app.log 2>&1 &
           sleep 5
