--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r entryTracker/requirements.txt
+          pip install -r requirements.txt
 
       - name: Start EntryTracker
         run: |
