--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,6 @@ jobs:
 
       - name: Start EntryTracker
         run: |
-          python app.py > app.log 2>&1 &
+          nohup python app.py > app.log 2>&1 &
           sleep 5
 
