--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Start EntryTracker
         run: |
           nohup python app.py > app.log 2>&1 &
-          sleep 5
+          sleep 10
 
+      - name: Run Tests
+        run: |
+          curl http://localhost:5000
