Improve test failure handling in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          curl http://localhost:5000
+          curl --fail http://localhost:5000 || (echo "App did not respond!" && cat app.log && exit 1)
