Refactor CI workflow to properly structure Package-application job and ensure Docker image build step is included

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,13 +31,13 @@ jobs:
         run: |
           curl --fail http://localhost:5000 || (echo "App did not respond!" && cat app.log && exit 1)
 
+  Package-application:
+    needs: Build-application
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    Package-application:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-  
-        - name: Build Docker image
-          run: |
-            docker build -t entrytracker:latest .
+      - name: Build Docker image
+        run: |
+          docker build -t entrytracker:latest .
