--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,4 @@ jobs:
             curl --fail http://localhost:5000 || (echo "E2E test failed!" && docker compose logs && exit 1)
         
         - name: Shut down E2E environment
-          run: docker compose down
+          run: docker compose down -v
