Add Push-to-ECR job to CI workflow for Docker image deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
     steps:
         - name: Checkout code
           uses: actions/checkout@v4
+
         - name: Set up Docker Compose
           run: docker compose version
 
@@ -62,3 +63,31 @@ jobs:
         
         - name: Shut down E2E environment
           run: docker compose down -v
+
+
+  Push-to-ECR:
+    needs: Package-application
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1  # or your region
+
+      - name: Login to Amazon ECR
+        run: |
+         aws ecr get-login-password --region ap-south-1 | \
+         docker login --username AWS --password-stdin 033567013533.dkr.ecr.ap-south-1.amazonaws.com
+
+      - name: Tag Docker image
+        run: |
+          docker tag entrytracker:latest 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
+
+      - name: Push Docker image to ECR
+        run: |
+          docker push 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
