--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
 
 
   Push-to-ECR:
-    needs: Package-application
+    needs: E2E-tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
