--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Build Docker image
+        run: |
+          docker build -t entrytracker:latest .
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
