--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,17 +81,71 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1  # or your region
-
+          aws-region: ap-south-1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+              aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+              aws-region: ap-south-1
+    
+      - name: Get latest patch version and bump it
+        id: versioning
+        run: |
+              set -e
+              repo="entrytracker-develeap"
+    
+              latest=$(aws ecr list-images \
+                --repository-name $repo \
+                --query 'imageIds[*].imageTag' \
+                --output text | tr '\t' '\n' | grep -E '^1\.0\.[0-9]+$' | sort -V | tail -n1)
+    
+              if [ -z "$latest" ]; then
+                new_version="1.0.0"
+              else
+                patch=$(echo "$latest" | cut -d. -f3)
+                new_patch=$((patch + 1))
+      - name: Build Docker image
+        run: |
+            docker build -t entrytracker:latest \
+                         -t entrytracker:${{ steps.versioning.outputs.version }} .
+              echo "version=$new_version" >> $GITHUB_OUTPUT
+        run: |
+            set -e
+            repo="entrytracker-develeap"
+  
+            latest=$(aws ecr list-images \
+              --repository-name $repo \
+              --query 'imageIds[*].imageTag' \
+              --output text | tr '\t' '\n' | grep -E '^1\.0\.[0-9]+$' | sort -V | tail -n1)
+  
+            if [ -z "$latest" ]; then
+              new_version="1.0.0"
+            else
+              patch=$(echo "$latest" | cut -d. -f3)
+              new_patch=$((patch + 1))
+              new_version="1.0.${new_patch}"
+            fi
+  
+            echo "📦 New image version: $new_version"
+            echo "version=$new_version" >> $GITHUB_OUTPUT
+  
+      - name: Build Docker image
+        run: |
+            docker build -t entrytracker:latest \
+                         -t entrytracker:${{ steps.versioning.outputs.version }} .
+  
       - name: Login to Amazon ECR
         run: |
-         aws ecr get-login-password --region ap-south-1 | \
-         docker login --username AWS --password-stdin 033567013533.dkr.ecr.ap-south-1.amazonaws.com
-
-      - name: Tag Docker image
+            aws ecr get-login-password --region ap-south-1 | \
+            docker login --username AWS --password-stdin 033567013533.dkr.ecr.ap-south-1.amazonaws.com
+  
+      - name: Tag Docker images for ECR
         run: |
-          docker tag entrytracker:latest 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
-
-      - name: Push Docker image to ECRR
+            docker tag entrytracker:latest 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
+            docker tag entrytracker:${{ steps.versioning.outputs.version }} 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:${{ steps.versioning.outputs.version }}
+  
+      - name: Push Docker images to ECR
         run: |
-          docker push 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
+            docker push 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
+            docker push 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:${{ steps.versioning.outputs.version }}
