--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,7 +141,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install SSH client
-        run:  apt-get update && apt-get install -y openssh-client
+        run: |
+            sudo apt-get update
+            sudo apt-get install -y openssh-client
       - name: Add SSH key
         run: |
           mkdir -p ~/.ssh
