Update deployment script to build Docker images during restart

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,11 +159,11 @@ jobs:
                 docker login --username AWS --password-stdin ${{ secrets.ECR_REPO_URI }}
   
               echo "📁 Navigating to app directory..."
-              cd ~/entrytracker
+              cd ~
   
               echo "⬇️ Pulling latest image..."
               docker compose pull
   
               echo "🚀 Restarting containers..."
-              docker compose up -d
+              docker compose up -d --build
             EOF 
