Update Docker Compose configuration to use backend network and simplify restart command in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,5 +165,5 @@ jobs:
               docker compose pull
   
               echo "🚀 Restarting containers..."
-              docker compose up -d --build
-            EOF 
+              docker compose up -d
+EOF 
