--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     networks:
-      - app-network
+      - backend-network
 
   entrytracker:
     build: .
@@ -26,10 +26,10 @@ services:
       DB_PASSWORD: password
       DB_NAME: entrytrackerdb
     networks:
-      - app-network
+      - backend-network
 
 volumes:
   db_data:
 
 networks:
-  app-network:
+  backend-network:
