Update deployment script to navigate to the correct app directory before pulling the latest Docker image

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,7 +159,7 @@ jobs:
                 docker login --username AWS --password-stdin ${{ secrets.ECR_REPO_URI }}
   
               echo "📁 Navigating to app directory..."
-              cd ~
+              cd ~/entrytracker-deployment
   
               echo "⬇️ Pulling latest image..."
               docker compose pull
