--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,19 +151,13 @@ jobs:
           chmod 400 ~/.ssh/deploy_key.pem
       - name: Deploy to EC2 via SSH
         run: |
-            ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-              set -e
-  
-              echo "🔐 Logging in to Amazon ECR..."
-              aws ecr get-login-password --region ${{ secrets.ECR_REGION }} | \
-                docker login --username AWS --password-stdin ${{ secrets.ECR_REPO_URI }}
-  
-              echo "📁 Navigating to app directory..."
-              cd ~
-  
-              echo "⬇️ Pulling latest image..."
-              docker compose pull
-  
-              echo "🚀 Restarting containers..."
-              docker compose up -d
-              EOF 
+         ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
+         "set -e && \
+         echo '🔐 Logging in to Amazon ECR...' && \
+         aws ecr get-login-password --region ${{ secrets.ECR_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REPO_URI }} && \
+         echo '📁 Navigating to app directory...' && \
+         cd ~ && \
+         echo '⬇️ Pulling latest image...' && \
+         docker compose pull && \
+         echo '🚀 Restarting containers...' && \
+         docker compose up -d"
