--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
         id: versioning
         run: |
                 set -e
-                repo="entrytracker-develeap"
+                repo="033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap"
       
                 latest=$(aws ecr list-images \
                   --repository-name $repo \
@@ -108,7 +108,7 @@ jobs:
                 fi
       
                 echo "📦 New image version: $new_version"
-                echo "version=$new_version" >> $GITHUB_OUTPUT
+                echo "version=$new_version" >> "$GITHUB_OUTPUT"
 
       - name: Build Docker image
         run: |
