--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,21 +66,29 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v4
 
-        - name: Start and verify E2E environment
+        - name: Start E2E environment with docker compose
           run: |
-            docker compose up -d
+            docker compose up -d --build
 
-            echo "Waiting for EntryTracker container to respond..."
+        - name: Wait for MySQL to be ready
+          run: |
+            echo "⏳ Waiting for MySQL on port 3306..."
             for i in {1..30}; do
-              if curl -sSf http://localhost:5000 > /dev/null; then
-                echo "✅ EntryTracker responded successfully!"
-                break
-              fi
-              echo "⏳ Still waiting for EntryTracker... ($i)"
+              nc -z localhost 3306 && echo "✅ MySQL is up!" && break
+              echo "⌛ MySQL not ready yet... ($i)"
               sleep 1
             done
+            nc -z localhost 3306 || (echo "❌ MySQL did not start" && exit 1)
 
-            curl --fail http://localhost:5000 || (echo "❌ E2E test failed!" && docker compose logs && exit 1)
+        - name: Wait for EntryTracker to be ready
+          run: |
+            echo "⏳ Waiting for EntryTracker on port 5000..."
+            for i in {1..30}; do
+              curl --fail http://localhost:5000 && echo "✅ EntryTracker is up!" && break
+              echo "⌛ EntryTracker not ready yet... ($i)"
+              sleep 1
+            done
+            curl --fail http://localhost:5000 || (echo "❌ EntryTracker not responding" && exit 1)
 
   Push-to-ECR:
     needs: E2E-tests
