--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,13 +72,13 @@ jobs:
 
         - name: Wait for MySQL to be ready
           run: |
-            echo "⏳ Waiting for MySQL on port 3306..."
             for i in {1..30}; do
-              nc -z localhost 3306 && echo "✅ MySQL is up!" && break
-              echo "⌛ MySQL not ready yet... ($i)"
+              nc -z localhost 3306 && echo "✅ MySQL is up" && exit 0
+              echo "⏳ MySQL not ready yet... ($i)"
               sleep 1
             done
-            nc -z localhost 3306 || (echo "❌ MySQL did not start" && exit 1)
+            echo "❌ MySQL did not start"
+            exit 1
 
         - name: Wait for EntryTracker to be ready
           run: |
