--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,12 +69,14 @@ jobs:
         - name: Start E2E environment with docker compose
           run: |
             docker compose up -d --build
-
+            
         - name: Wait for EntryTracker to be fully ready (DB included)
           run: |
             echo "⏳ Waiting for EntryTracker to connect to DB..."
             for i in {1..30}; do
               response=$(curl -s http://localhost:5000 || echo "")
+              echo "📡 Response attempt $i:"
+              echo "$response"
               if echo "$response" | grep -q '"message": "Data fetched successfully from the database."'; then
                 echo "✅ EntryTracker is fully connected to the database!"
                 exit 0
@@ -84,9 +86,8 @@ jobs:
               fi
             done
             echo "❌ EntryTracker did not connect to the database in time."
-            echo "Last response was:"
-            echo "$response"
             exit 1
+
 
 
   Push-to-ECR:
