Fix typo in ECR step name from "Push Docker images to ECR" to "Push Docker images to ECRR"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,7 +149,7 @@ jobs:
           docker tag entrytracker:latest ${{ secrets.ECR_REPO_URI }}:latest
           docker tag entrytracker:latest ${{ secrets.ECR_REPO_URI }}:${{ steps.versioning.outputs.new_tag }}
 
-      - name: Push Docker images to ECR
+      - name: Push Docker images to ECRR
         run: |
           docker push ${{ secrets.ECR_REPO_URI }}:latest
           docker push ${{ secrets.ECR_REPO_URI }}:${{ steps.versioning.outputs.new_tag }}
