--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,12 +127,10 @@ jobs:
         run: |
           set -e
           repo="entrytracker-develeap"
-
           latest=$(aws ecr list-images \
             --repository-name $repo \
             --query 'imageIds[*].imageTag' \
-            --output text | tr '\t' '\n' | grep -E '^1\\.0\\.[0-9]+$' | sort -V | tail -n1)
-
+            --output text | tr '\t' '\n' | grep -E '^1\.0\.[0-9]+$' | sort -V | tail -n1)
           if [ -z "$latest" ]; then
             new_version="1.0.0"
           else
@@ -140,16 +138,15 @@ jobs:
             new_patch=$((patch + 1))
             new_version="1.0.${new_patch}"
           fi
-
           echo "📦 New image version: $new_version"
-          echo "new_tag=$new_version" >> "$GITHUB_OUTPUT"
+          echo "version=$new_version" >> "$GITHUB_OUTPUT"
 
       - name: Tag Docker images correctly
         run: |
           docker tag entrytracker:latest ${{ secrets.ECR_REPO_URI }}:latest
           docker tag entrytracker:latest ${{ secrets.ECR_REPO_URI }}:${{ steps.versioning.outputs.new_tag }}
 
-      - name: Push Docker images to ECRR
+      - name: Push Docker images to ECR
         run: |
           docker push ${{ secrets.ECR_REPO_URI }}:latest
           docker push ${{ secrets.ECR_REPO_URI }}:${{ steps.versioning.outputs.new_tag }}
