Update Docker image push command to use version output from versioning step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,7 +149,7 @@ jobs:
       - name: Push Docker images to ECR
         run: |
           docker push ${{ secrets.ECR_REPO_URI }}:latest
-          docker push ${{ secrets.ECR_REPO_URI }}:${{ steps.versioning.outputs.new_tag }}
+          docker push ${{ secrets.ECR_REPO_URI }}:${{ steps.versioning.outputs.version }}
 
 
 
