--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,22 @@
 name: CI Pipeline - EntryTracker
+
 on:
   push:
     branches:
       - main
+
 jobs:
   Build-application:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -30,6 +34,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Build Docker image
         run: |
           docker build -t entrytracker:latest .
@@ -40,14 +45,18 @@ jobs:
         with:
           name: entrytracker-image
           path: entrytracker.tar
+
   E2E-tests:
     needs: Package-application
     runs-on: ubuntu-latest
+    
     steps:
         - name: Checkout code
           uses: actions/checkout@v4
+
         - name: Set up Docker Compose
           run: docker compose version
+
         - name: Start E2E environment with docker compose
           run: |
             docker compose up -d --build
@@ -55,40 +64,49 @@ jobs:
         - name: Run E2E test with curl
           run: |
             curl --fail http://localhost:5000 || (echo "E2E test failed!" && docker compose logs && exit 1)
+        
         - name: Shut down E2E environment
           run: docker compose down -v
+
   Push-to-ECR:
     needs: E2E-tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Download Docker image artifact
         uses: actions/download-artifact@v4
         with:
           name: entrytracker-image
+  
       - name: Load Docker image from tar
         run: |
           docker load -i entrytracker.tar
           echo "Docker image loaded from entrytracker.tar"
+  
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.ECR_REGION }}
+
       - name: Login to Amazon ECR
         run: |
           aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 033567013533.dkr.ecr.ap-south-1.amazonaws.com
+    
       - name: Get latest patch version and bump it
         id: versioning
         run: |
           set -e
           repo="entrytracker-develeap"
+  
           latest=$(aws ecr list-images \
             --repository-name $repo \
             --query 'imageIds[*].imageTag' \
             --output text | tr '\t' '\n' | grep -E '^1\.0\.[0-9]+$' | sort -V | tail -n1)
+
           if [ -z "$latest" ]; then
             new_version="1.0.0"
           else
@@ -96,8 +114,10 @@ jobs:
             new_patch=$((patch + 1))
             new_version="1.0.${new_patch}"
           fi
+
           echo "📦 New image version: $new_version"
           echo "version=$new_version" >> "$GITHUB_OUTPUT"
+
       - name: Tag Docker images
         run: |
           docker tag entrytracker:latest 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
@@ -119,7 +139,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_KEY }}" > ~/.ssh/deploy_key.pem
           chmod 400 ~/.ssh/deploy_key.pem
-      - name: Deploy to EC2 via SSH
+      - name: Deploy to EC2 via SSHH
         run: |
          ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
          "set -e && \
